# firework

./: Cargo.toml  LICENSE  README.md  conics.yml  goals.md  volume.yml
examples/: conics.rs  cornell_box.rs  cylinder.rs  earth.rs  hdri_test.rs  heightmap.rs  part2_all.rs  random_spheres.rs  random_sphers.rs  suzanne.rs  teapot.rs  volume_test.rs
scenes/: conics.yml  suzanne.yml  teapot.yml
src/: aabb.rs  bvh.rs  camera.rs  drawing.rs  environment.rs  lib.rs  main.rs  material.rs  objects.rs  ray.rs  render.rs  scene.rs  scenes.rs  serde_compat.rs  texture.rs  util.rs  window.rs
src/objects/: cone.rs  cylinder.rs  disk.rs  mesh.rs  mod.rs  rect.rs  rect3d.rs  sphere.rs  volume.rs
