[package]
name = "firework"
version = "0.1.0"
authors = ["Ritoban Roy-Chowdhury <ritobanrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.18"
ultraviolet = "0.5"
tiny-rng = "0.1.0"
image = "0.23"
rayon = "1.3"
itertools = "0.9"
tobj = "1.0"
typetag = "0.1"
serde = "1.0"
serde_yaml = "0.8"

[profile.release]
lto = true
