[package]
name = "firework"
version = "0.1.0"
authors = ["Ritoban Roy-Chowdhury <ritobanrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.15"
ultraviolet = "0.5"
tiny-rng = "0.1"
image = "0.22"
rayon = "1.3"
itertools = "0.9"
tobj = "1.0"
